Fix dark mode comments container inheriting teaser background
The background-color and box-shadow should only apply to the teaser
bar, not the .NB-feed-story-comments container which should be
transparent to match the surrounding story area.

--- a/media/css/reader/darkmode.css
+++ b/media/css/reader/darkmode.css
@@ -2717,14 +2717,19 @@ color: #fff;
     background-color: #303739;
 }
 
-/* Story comment teaser (Top of story) and story comment (bottom of story) color */
-.NB-dark .NB-story-comments-shares-teaser,
-.NB-dark .NB-feed-story-comments {
+/* Story comment teaser (Top of story) */
+.NB-dark .NB-story-comments-shares-teaser {
     background-color: #303739;
     color: #c0c0c0;
     border-color: #18191A;
     text-shadow: 0 1px 0 rgba(0, 0, 0, .8);
     box-shadow: inset 0px 1px 1px rgba(0, 0, 0, .3);
+}
+
+/* Story comments (bottom of story) */
+.NB-dark .NB-feed-story-comments {
+    border-color: #18191A;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .8);
 }
 
 /* Story comment border color */
